# eventos_tecnologia

./: README.md  pyproject.toml
api/: app.py  main.py  schemas.py
tests/: test_app.py
